sintacticoBison.output
Terminals unused in grammar

   OTHER


Gramática

    0 $accept: prog $end

    1 prog: INICIO sentencias FIN

    2 sentencias: sentencias sentencia
    3           | sentencia

    4 sentencia: ENTERO ID PUNTO
    5          | ENTERO ID ASIGNACION NUMERO PUNTO
    6          | ID ASIGNACION expresion PUNTO
    7          | ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO COMA NUMERO COMA NUMERO PARENTESISDERECHO PUNTO
    8          | ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO COMA NUMERO PARENTESISDERECHO PUNTO
    9          | ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID COMA ID COMA ID PARENTESISDERECHO PUNTO
   10          | ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID COMA ID PARENTESISDERECHO PUNTO
   11          | MOSTRAREDAD PARENTESISIZQUIERDO ID PARENTESISDERECHO PUNTO

   12 expresion: primaria
   13          | expresion SUMA primaria
   14          | expresion RESTA primaria

   15 primaria: ID
   16         | NUMERO
   17         | PARENTESISIZQUIERDO expresion PARENTESISDERECHO


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
ASIGNACION (258) 5 6 7 8 9 10
PUNTO (259) 4 5 6 7 8 9 10 11
SUMA (260) 13
RESTA (261) 14
PARENTESISIZQUIERDO (262) 7 8 9 10 11 17
PARENTESISDERECHO (263) 7 8 9 10 11 17
COMA (264) 7 8 9 10
OTHER (265)
ID (266) 4 5 6 7 8 9 10 11 15
NUMERO (267) 5 7 8 16
CALCULARFECHA (268) 7 9
CALCULAREDAD (269) 8 10
MOSTRAREDAD (270) 11
INICIO (271) 1
FIN (272) 1
ENTERO (273) 4 5


No terminales con las reglas donde aparecen

$accept (19)
    en la izquierda: 0
prog (20)
    en la izquierda: 1, en la derecha: 0
sentencias (21)
    en la izquierda: 2 3, en la derecha: 1 2
sentencia (22)
    en la izquierda: 4 5 6 7 8 9 10 11, en la derecha: 2 3
expresion (23)
    en la izquierda: 12 13 14, en la derecha: 6 13 14 17
primaria (24)
    en la izquierda: 15 16 17, en la derecha: 12 13 14


estado 0

    0 $accept: . prog $end

    INICIO  desplazar e ir al estado 1

    prog  ir al estado 2


estado 1

    1 prog: INICIO . sentencias FIN

    ID           desplazar e ir al estado 3
    MOSTRAREDAD  desplazar e ir al estado 4
    ENTERO       desplazar e ir al estado 5

    sentencias  ir al estado 6
    sentencia   ir al estado 7


estado 2

    0 $accept: prog . $end

    $end  desplazar e ir al estado 8


estado 3

    6 sentencia: ID . ASIGNACION expresion PUNTO
    7          | ID . ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO COMA NUMERO COMA NUMERO PARENTESISDERECHO PUNTO
    8          | ID . ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO COMA NUMERO PARENTESISDERECHO PUNTO
    9          | ID . ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID COMA ID COMA ID PARENTESISDERECHO PUNTO
   10          | ID . ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID COMA ID PARENTESISDERECHO PUNTO

    ASIGNACION  desplazar e ir al estado 9


estado 4

   11 sentencia: MOSTRAREDAD . PARENTESISIZQUIERDO ID PARENTESISDERECHO PUNTO

    PARENTESISIZQUIERDO  desplazar e ir al estado 10


estado 5

    4 sentencia: ENTERO . ID PUNTO
    5          | ENTERO . ID ASIGNACION NUMERO PUNTO

    ID  desplazar e ir al estado 11


estado 6

    1 prog: INICIO sentencias . FIN
    2 sentencias: sentencias . sentencia

    ID           desplazar e ir al estado 3
    MOSTRAREDAD  desplazar e ir al estado 4
    FIN          desplazar e ir al estado 12
    ENTERO       desplazar e ir al estado 5

    sentencia  ir al estado 13


estado 7

    3 sentencias: sentencia .

    $default  reduce usando la regla 3 (sentencias)


estado 8

    0 $accept: prog $end .

    $default  aceptar


estado 9

    6 sentencia: ID ASIGNACION . expresion PUNTO
    7          | ID ASIGNACION . CALCULARFECHA PARENTESISIZQUIERDO NUMERO COMA NUMERO COMA NUMERO PARENTESISDERECHO PUNTO
    8          | ID ASIGNACION . CALCULAREDAD PARENTESISIZQUIERDO NUMERO COMA NUMERO PARENTESISDERECHO PUNTO
    9          | ID ASIGNACION . CALCULARFECHA PARENTESISIZQUIERDO ID COMA ID COMA ID PARENTESISDERECHO PUNTO
   10          | ID ASIGNACION . CALCULAREDAD PARENTESISIZQUIERDO ID COMA ID PARENTESISDERECHO PUNTO

    PARENTESISIZQUIERDO  desplazar e ir al estado 14
    ID                   desplazar e ir al estado 15
    NUMERO               desplazar e ir al estado 16
    CALCULARFECHA        desplazar e ir al estado 17
    CALCULAREDAD         desplazar e ir al estado 18

    expresion  ir al estado 19
    primaria   ir al estado 20


estado 10

   11 sentencia: MOSTRAREDAD PARENTESISIZQUIERDO . ID PARENTESISDERECHO PUNTO

    ID  desplazar e ir al estado 21


estado 11

    4 sentencia: ENTERO ID . PUNTO
    5          | ENTERO ID . ASIGNACION NUMERO PUNTO

    ASIGNACION  desplazar e ir al estado 22
    PUNTO       desplazar e ir al estado 23


estado 12

    1 prog: INICIO sentencias FIN .

    $default  reduce usando la regla 1 (prog)


estado 13

    2 sentencias: sentencias sentencia .

    $default  reduce usando la regla 2 (sentencias)


estado 14

   17 primaria: PARENTESISIZQUIERDO . expresion PARENTESISDERECHO

    PARENTESISIZQUIERDO  desplazar e ir al estado 14
    ID                   desplazar e ir al estado 15
    NUMERO               desplazar e ir al estado 16

    expresion  ir al estado 24
    primaria   ir al estado 20


estado 15

   15 primaria: ID .

    $default  reduce usando la regla 15 (primaria)


estado 16

   16 primaria: NUMERO .

    $default  reduce usando la regla 16 (primaria)


estado 17

    7 sentencia: ID ASIGNACION CALCULARFECHA . PARENTESISIZQUIERDO NUMERO COMA NUMERO COMA NUMERO PARENTESISDERECHO PUNTO
    9          | ID ASIGNACION CALCULARFECHA . PARENTESISIZQUIERDO ID COMA ID COMA ID PARENTESISDERECHO PUNTO

    PARENTESISIZQUIERDO  desplazar e ir al estado 25


estado 18

    8 sentencia: ID ASIGNACION CALCULAREDAD . PARENTESISIZQUIERDO NUMERO COMA NUMERO PARENTESISDERECHO PUNTO
   10          | ID ASIGNACION CALCULAREDAD . PARENTESISIZQUIERDO ID COMA ID PARENTESISDERECHO PUNTO

    PARENTESISIZQUIERDO  desplazar e ir al estado 26


estado 19

    6 sentencia: ID ASIGNACION expresion . PUNTO
   13 expresion: expresion . SUMA primaria
   14          | expresion . RESTA primaria

    PUNTO  desplazar e ir al estado 27
    SUMA   desplazar e ir al estado 28
    RESTA  desplazar e ir al estado 29


estado 20

   12 expresion: primaria .

    $default  reduce usando la regla 12 (expresion)


estado 21

   11 sentencia: MOSTRAREDAD PARENTESISIZQUIERDO ID . PARENTESISDERECHO PUNTO

    PARENTESISDERECHO  desplazar e ir al estado 30


estado 22

    5 sentencia: ENTERO ID ASIGNACION . NUMERO PUNTO

    NUMERO  desplazar e ir al estado 31


estado 23

    4 sentencia: ENTERO ID PUNTO .

    $default  reduce usando la regla 4 (sentencia)


estado 24

   13 expresion: expresion . SUMA primaria
   14          | expresion . RESTA primaria
   17 primaria: PARENTESISIZQUIERDO expresion . PARENTESISDERECHO

    SUMA               desplazar e ir al estado 28
    RESTA              desplazar e ir al estado 29
    PARENTESISDERECHO  desplazar e ir al estado 32


estado 25

    7 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO . NUMERO COMA NUMERO COMA NUMERO PARENTESISDERECHO PUNTO
    9          | ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO . ID COMA ID COMA ID PARENTESISDERECHO PUNTO

    ID      desplazar e ir al estado 33
    NUMERO  desplazar e ir al estado 34


estado 26

    8 sentencia: ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO . NUMERO COMA NUMERO PARENTESISDERECHO PUNTO
   10          | ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO . ID COMA ID PARENTESISDERECHO PUNTO

    ID      desplazar e ir al estado 35
    NUMERO  desplazar e ir al estado 36


estado 27

    6 sentencia: ID ASIGNACION expresion PUNTO .

    $default  reduce usando la regla 6 (sentencia)


estado 28

   13 expresion: expresion SUMA . primaria

    PARENTESISIZQUIERDO  desplazar e ir al estado 14
    ID                   desplazar e ir al estado 15
    NUMERO               desplazar e ir al estado 16

    primaria  ir al estado 37


estado 29

   14 expresion: expresion RESTA . primaria

    PARENTESISIZQUIERDO  desplazar e ir al estado 14
    ID                   desplazar e ir al estado 15
    NUMERO               desplazar e ir al estado 16

    primaria  ir al estado 38


estado 30

   11 sentencia: MOSTRAREDAD PARENTESISIZQUIERDO ID PARENTESISDERECHO . PUNTO

    PUNTO  desplazar e ir al estado 39


estado 31

    5 sentencia: ENTERO ID ASIGNACION NUMERO . PUNTO

    PUNTO  desplazar e ir al estado 40


estado 32

   17 primaria: PARENTESISIZQUIERDO expresion PARENTESISDERECHO .

    $default  reduce usando la regla 17 (primaria)


estado 33

    9 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID . COMA ID COMA ID PARENTESISDERECHO PUNTO

    COMA  desplazar e ir al estado 41


estado 34

    7 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO . COMA NUMERO COMA NUMERO PARENTESISDERECHO PUNTO

    COMA  desplazar e ir al estado 42


estado 35

   10 sentencia: ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID . COMA ID PARENTESISDERECHO PUNTO

    COMA  desplazar e ir al estado 43


estado 36

    8 sentencia: ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO . COMA NUMERO PARENTESISDERECHO PUNTO

    COMA  desplazar e ir al estado 44


estado 37

   13 expresion: expresion SUMA primaria .

    $default  reduce usando la regla 13 (expresion)


estado 38

   14 expresion: expresion RESTA primaria .

    $default  reduce usando la regla 14 (expresion)


estado 39

   11 sentencia: MOSTRAREDAD PARENTESISIZQUIERDO ID PARENTESISDERECHO PUNTO .

    $default  reduce usando la regla 11 (sentencia)


estado 40

    5 sentencia: ENTERO ID ASIGNACION NUMERO PUNTO .

    $default  reduce usando la regla 5 (sentencia)


estado 41

    9 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID COMA . ID COMA ID PARENTESISDERECHO PUNTO

    ID  desplazar e ir al estado 45


estado 42

    7 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO COMA . NUMERO COMA NUMERO PARENTESISDERECHO PUNTO

    NUMERO  desplazar e ir al estado 46


estado 43

   10 sentencia: ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID COMA . ID PARENTESISDERECHO PUNTO

    ID  desplazar e ir al estado 47


estado 44

    8 sentencia: ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO COMA . NUMERO PARENTESISDERECHO PUNTO

    NUMERO  desplazar e ir al estado 48


estado 45

    9 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID COMA ID . COMA ID PARENTESISDERECHO PUNTO

    COMA  desplazar e ir al estado 49


estado 46

    7 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO COMA NUMERO . COMA NUMERO PARENTESISDERECHO PUNTO

    COMA  desplazar e ir al estado 50


estado 47

   10 sentencia: ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID COMA ID . PARENTESISDERECHO PUNTO

    PARENTESISDERECHO  desplazar e ir al estado 51


estado 48

    8 sentencia: ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO COMA NUMERO . PARENTESISDERECHO PUNTO

    PARENTESISDERECHO  desplazar e ir al estado 52


estado 49

    9 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID COMA ID COMA . ID PARENTESISDERECHO PUNTO

    ID  desplazar e ir al estado 53


estado 50

    7 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO COMA NUMERO COMA . NUMERO PARENTESISDERECHO PUNTO

    NUMERO  desplazar e ir al estado 54


estado 51

   10 sentencia: ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID COMA ID PARENTESISDERECHO . PUNTO

    PUNTO  desplazar e ir al estado 55


estado 52

    8 sentencia: ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO COMA NUMERO PARENTESISDERECHO . PUNTO

    PUNTO  desplazar e ir al estado 56


estado 53

    9 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID COMA ID COMA ID . PARENTESISDERECHO PUNTO

    PARENTESISDERECHO  desplazar e ir al estado 57


estado 54

    7 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO COMA NUMERO COMA NUMERO . PARENTESISDERECHO PUNTO

    PARENTESISDERECHO  desplazar e ir al estado 58


estado 55

   10 sentencia: ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID COMA ID PARENTESISDERECHO PUNTO .

    $default  reduce usando la regla 10 (sentencia)


estado 56

    8 sentencia: ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO COMA NUMERO PARENTESISDERECHO PUNTO .

    $default  reduce usando la regla 8 (sentencia)


estado 57

    9 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID COMA ID COMA ID PARENTESISDERECHO . PUNTO

    PUNTO  desplazar e ir al estado 59


estado 58

    7 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO COMA NUMERO COMA NUMERO PARENTESISDERECHO . PUNTO

    PUNTO  desplazar e ir al estado 60


estado 59

    9 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID COMA ID COMA ID PARENTESISDERECHO PUNTO .

    $default  reduce usando la regla 9 (sentencia)


estado 60

    7 sentencia: ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO COMA NUMERO COMA NUMERO PARENTESISDERECHO PUNTO .

    $default  reduce usando la regla 7 (sentencia)
